crates/kevin-config/tests/snapshots/ac_ws02_config__kohral_profile_show.snap
---
source: crates/kevin-config/tests/ac_ws02_config.rs
expression: kohral.redacted_toml_with_sources()
---
kevin.data_dir = "~/.local/share/kevin"                  # default
kevin.instance_name = "kevin"                            # default
kevin.profile = "kohral"                                 # --set
kevin.auto_approve_plans = true                          # profile:kohral
kevin.shutdown_grace_period = "30s"                      # default
database.url = "postgres://kevin:***@localhost:5432/kevin" # default
database.pool_size = 10                                  # default
database.auto_migrate = false                            # profile:kohral
database.statement_timeout = "30s"                       # default
server.enabled = true                                    # default
server.bind = "0.0.0.0:7777"                             # profile:kohral
server.auth_token_file = "***"                           # default
server.cors_origins = []                                 # default
server.request_timeout = "30s"                           # default
server.sse_keepalive = "15s"                             # default
server.docs = false                                      # profile:kohral
server.token_grace = "5m"                                # default
client.server_url = ""                                   # default
client.token_file = "***"                                # default
budget.default_run_usd = 10.0                            # default
budget.default_task_usd = 3.0                            # default
budget.default_run_wall = "2h"                           # default
budget.default_task_wall = "30m"                         # default
budget.max_attempts = 2                                  # default
budget.max_parallel_tasks = 4                            # default
budget.max_tokens_per_task = 2000000                     # default
orchestrator.question_confidence_threshold = 0.7         # default
orchestrator.max_questions_per_run = 4                   # default
orchestrator.max_tasks_per_run = 24                      # default
orchestrator.role_call_timeout = "15m"                   # default
orchestrator.question_default_timeout = "10m"            # default
orchestrator.plan_revision_limit = 2                     # default
orchestrator.evaluation_timeout = "10m"                  # default
orchestrator.progress_interval = "10s"                   # default
concurrency.worker_threads = 0                           # default
concurrency.per_worker_kind.claude = 4                   # default
concurrency.per_worker_kind.codex = 4                    # default
concurrency.per_worker_kind.pi = 4                       # default
concurrency.per_worker_kind.opencode = 4                 # default
concurrency.per_worker_kind.fake = 64                    # default
concurrency.blocking_threads = 2                         # default
retention.task_log_days = 30                             # default
retention.transcript_days = 30                           # default
retention.artifact_days = 90                             # default
workers.kill_grace = "10s"                               # default
workers.claude.enabled = true                            # default
workers.claude.bin = "claude"                            # default
workers.claude.permission_mode = "acceptEdits"           # default
workers.claude.allowed_tools = ["Read", "Edit", "Write", "Bash(git *)", "Bash(cargo *)", "Bash(npm *)", "Bash(pnpm *)", "Bash(bun *)", "Grep", "Glob"] # default
workers.claude.extra_args = []                           # default
workers.claude.env_passthrough = ["ANTHROPIC_API_KEY", "CLAUDE_CODE_OAUTH_TOKEN", "HOME", "PATH", "SSL_CERT_FILE"] # default
workers.claude.max_turns = 200                           # default
workers.claude.structured_output = "json_schema"         # default
workers.codex.enabled = true                             # default
workers.codex.bin = "codex"                              # default
workers.codex.sandbox = "workspace-write"                # default
workers.codex.extra_args = ["--skip-git-repo-check"]     # default
workers.codex.env_passthrough = ["OPENAI_API_KEY", "CODEX_HOME", "HOME", "PATH"] # default
workers.pi.enabled = true                                # default
workers.pi.bin = "pi"                                    # default
workers.pi.extra_args = ["--no-session"]                 # default
workers.pi.env_passthrough = ["HOME", "PATH", "ANTHROPIC_API_KEY", "OPENAI_API_KEY", "GEMINI_API_KEY"] # default
workers.opencode.enabled = true                          # default
workers.opencode.bin = "opencode"                        # default
workers.opencode.agent = ""                              # default
workers.opencode.extra_args = []                         # default
workers.opencode.env_passthrough = ["HOME", "PATH", "ANTHROPIC_API_KEY", "OPENAI_API_KEY"] # default
workers.fake.enabled = false                             # default
workers.fake.script = ""                                 # default
models.fable5-claude.worker = "claude"                   # default
models.fable5-claude.model = "claude-fable-5"            # default
models.fable5-claude.tier = "frontier"                   # default
models.fable5-claude.context_tokens = 1000000            # default
models.fable5-claude.input_usd_per_m = 10.0              # default
models.fable5-claude.output_usd_per_m = 50.0             # default
models.fable5-claude.tags = ["reasoning", "planning", "judge", "hard"] # default
models.fake.worker = "fake"                              # default
models.fake.model = "fake"                               # default
models.fake.tier = "fast"                                # default
models.fake.input_usd_per_m = 0.0                        # default
models.fake.output_usd_per_m = 0.0                       # default
models.gpt56-codex.worker = "codex"                      # default
models.gpt56-codex.model = "gpt-5.6"                     # default
models.gpt56-codex.tier = "frontier"                     # default
models.gpt56-codex.tags = ["coding", "implement", "review"] # default
models.haiku45-claude.worker = "claude"                  # default
models.haiku45-claude.model = "claude-haiku-4-5"         # default
models.haiku45-claude.tier = "fast"                      # default
models.haiku45-claude.context_tokens = 200000            # default
models.haiku45-claude.input_usd_per_m = 1.0              # default
models.haiku45-claude.output_usd_per_m = 5.0             # default
models.haiku45-claude.tags = ["summarise", "classify", "cheap"] # default
models.opus5-claude.worker = "claude"                    # default
models.opus5-claude.model = "claude-opus-5"              # default
models.opus5-claude.tier = "frontier"                    # default
models.opus5-claude.context_tokens = 1000000             # default
models.opus5-claude.input_usd_per_m = 5.0                # default
models.opus5-claude.output_usd_per_m = 25.0              # default
models.opus5-claude.tags = ["reasoning", "coding", "planning", "judge"] # default
models.sonnet5-claude.worker = "claude"                  # default
models.sonnet5-claude.model = "claude-sonnet-5"          # default
models.sonnet5-claude.tier = "balanced"                  # default
models.sonnet5-claude.context_tokens = 1000000           # default
models.sonnet5-claude.input_usd_per_m = 3.0              # default
models.sonnet5-claude.output_usd_per_m = 15.0            # default
models.sonnet5-claude.tags = ["coding", "implement", "test", "review"] # default
models.sonnet5-opencode.worker = "opencode"              # default
models.sonnet5-opencode.model = "anthropic/claude-sonnet-5" # default
models.sonnet5-opencode.tier = "balanced"                # default
models.sonnet5-opencode.input_usd_per_m = 3.0            # default
models.sonnet5-opencode.output_usd_per_m = 15.0          # default
models.sonnet5-opencode.tags = ["coding"]                # default
models.sonnet5-pi.worker = "pi"                          # default
models.sonnet5-pi.model = "claude-sonnet-5"              # default
models.sonnet5-pi.tier = "balanced"                      # default
models.sonnet5-pi.input_usd_per_m = 3.0                  # default
models.sonnet5-pi.output_usd_per_m = 15.0                # default
models.sonnet5-pi.tags = ["coding"]                      # default
models.sonnet5-pi.provider = "anthropic"                 # default
roles.planner = "opus5-claude"                           # default
roles.clarifier = "opus5-claude"                         # default
roles.judge = "opus5-claude"                             # default
roles.integrator = "sonnet5-claude"                      # default
roles.default = "sonnet5-claude"                         # default
roles.effort.planner = "xhigh"                           # default
roles.effort.judge = "high"                              # default
roles.effort.integrator = "medium"                       # default
routing.policy = "thompson"                              # default
routing.exploration = 0.1                                # default
routing.min_samples_before_exploit = 3                   # default
routing.quality_weight = 0.7                             # default
routing.cost_weight = 0.2                                # default
routing.latency_weight = 0.1                             # default
routing.prefer_tier_for_complexity.low = "fast"          # default
routing.prefer_tier_for_complexity.medium = "balanced"   # default
routing.prefer_tier_for_complexity.high = "frontier"     # default
routing.kinds.research.candidates = ["opus5-claude", "sonnet5-claude"] # default
routing.kinds.implement.candidates = ["sonnet5-claude", "gpt56-codex", "opus5-claude"] # default
routing.kinds.test.candidates = ["sonnet5-claude", "gpt56-codex"] # default
routing.kinds.review.candidates = ["opus5-claude", "gpt56-codex"] # default
routing.kinds.refactor.candidates = ["sonnet5-claude", "gpt56-codex"] # default
routing.kinds.debug.candidates = ["opus5-claude", "gpt56-codex", "sonnet5-claude"] # default
routing.kinds.write.candidates = ["sonnet5-claude", "haiku45-claude"] # default
routing.kinds.ops.candidates = ["sonnet5-claude"]        # default
memory.enabled = true                                    # default
memory.embedder = "fastembed"                            # default
memory.embedding_model = "BAAI/bge-small-en-v1.5"        # default
memory.dimensions = 384                                  # default
memory.top_k = 8                                         # default
memory.min_similarity = 0.35                             # default
memory.context_max_tokens = 2500                         # default
memory.store_run_summaries = true                        # default
memory.store_artifact_summaries = true                   # default
memory.decay_half_life_days = 90                         # default
evaluation.enabled = true                                # default
evaluation.evaluate_tasks = true                         # default
evaluation.rubric = "default"                            # default
evaluation.auto_apply = ["routing", "memory"]            # default
evaluation.proposals_require_approval = true             # default
workspace.strategy = "auto"                              # default
workspace.root = ".kevin/workspaces"                     # default
workspace.branch_prefix = "kevin/"                       # default
workspace.cleanup = "on_success"                         # default
workspace.integration = "pr"                             # default
workspace.pr_per_task = false                            # default
checks.commands = []                                     # default
sandbox.tier = "cli-native"                              # default
sandbox.allow_dangerous_flags = false                    # derived
sandbox.network = "inherit"                              # default
sandbox.env_allowlist_extra = []                         # default
telemetry.log_format = "json"                            # profile:kohral
telemetry.log_level = "info"                             # default
telemetry.metrics_bind = "0.0.0.0:9464"                  # profile:kohral
telemetry.otlp_endpoint = ""                             # default
kohral.enabled = true                                    # profile:kohral
kohral.bind = "0.0.0.0:8080"                             # default
kohral.token_file = "***"                                # default
kohral.identity_file = "***"                             # default
kohral.collaboration_url = ""                            # default
kohral.soul_file = "/opt/kevin/config/SOUL.md"           # default
kohral.documentation_file = "/opt/kevin/config/KOHRAL_DOCUMENTATION.md" # default
kohral.memory_file = "/opt/kevin/data/MEMORY.md"         # default
kohral.run_timeout = "30m"                               # default
kohral.max_attachment_bytes = 26214400                   # default
